welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: '=' expected but ';' found.
	x=Color.yellow
^